toml-pretty-deser/compilation_failure_tests/absorb_remaining_wrong_type_vec.stderr
error: #[tpd(absorb_remaining)] requires the field type to be `IndexMap<K, V>`
 --> compilation_failure_tests/absorb_remaining_wrong_type_vec.rs:9:12
  |
9 |     extra: Vec<String>,
  |            ^^^^^^^^^^^
